@@ -6,6 +6,7 @@
 	* Moved facetting initialization from pi_results to faceting query modifier
 	* Added interface tx_solr_SearchComponent
 	* Added interface tx_solr_QueryAware
+	* Added a search component manager
 
 2012-07-27  Ingo Renner  <ingo.renner@dkd.de>
 
